updated bgcolor to fix a11y contrast error notifications

--- a/sass/_theme_footer.sass
+++ b/sass/_theme_footer.sass
@@ -1,6 +1,6 @@
 /* footer
 @mixin footer-background
-	background: url('assets/img/footer.png' ) no-repeat center bottom
+	background: url('assets/img/footer.png' ) no-repeat center bottom $uwSpiritPurple
 	background-size: cover
 @mixin footer-wordmark-declarations
 	background: url('assets/img/UW-DGH-logo-reversed-centered.png') no-repeat 0 0 transparent
